@@ -4,8 +4,10 @@ ubuntu-dev-tools (0.109) UNRELEASED; urgency=low
     (LP: #692003)
   * Support reading configuration variables from devscripts configuration
     files. (LP: #681693)
+  * Support the combined "Name <email>" format in UBUMAIL, DEBFULLNAME, and
+    DEBEMAIL. (LP: #665202)
 
- -- Stefano Rivera <stefanor@ubuntu.com>  Sun, 19 Dec 2010 20:41:06 +0200
+ -- Stefano Rivera <stefanor@ubuntu.com>  Sun, 19 Dec 2010 20:47:22 +0200
 
 ubuntu-dev-tools (0.108) experimental; urgency=low
 
